# Imdb-chat-svc

./: .gitignore  .slugignore  README.md  app.py  env.variables.app.sh  imdb_movies.db  pyproject.toml  streamlit_app.py
chromadb_handler/: chromadb_handler.py
database/: database.py  insert_data.py  python_sqlite.py
prompts/: prompt.yaml
usecases/: rag_query.py
utils/: autogen_imdb.py  constants.py  gemini_handler.py  groq_custom_llm.py  intent_classifier.py  prompt_reader.py  query_agents.py  retrieval_handler.py
webserver/: api_models.py  endpoints.py  extensions.py
